--- a/src/App.css
+++ b/src/App.css
@@ -29,3 +29,16 @@
   font-size: 15px;
   cursor: pointer;
 }
+
+.task {
+  background: #f4f4f4;
+  margin: 5px;
+  padding: 5px 20px;
+  cursor: pointer;
+}
+
+.task h3 {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
